2003-07-06  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs : Load(string filename) should close its stream.
	  Small change for the latest DTDObjectModel change.
	* XmlTextReader.cs : Changed for the latest DTDObjectModel change (all
	  changed methods are only related to DTD stuff).
	  Now uses XmlSchemaDatatype for attribute type definition.
	* XmlValidatingReader : initial (limited) support for DTD validation.
	  It can handle only XmlTextReader.
	* DTDObjectModel.cs : changed radically for initial validation support.
	* added DTDAutomata.cs and DTDValidatingReader.cs.

2003-07-06  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlElement.cs : Removed extraneous xmlns output support (it should
	  be done by XmlTextWriter).
	* XmlNode.cs : InsertBefore() now checks validity of the newChild (and
	  most of the changes are in fact indentation changes).
	* XmlWriter.cs : WriteAttributes() now can write entity references.
	  WriteNode() now writes xmldecl attributes correctly.
	  Removed namespaceManager and xmlns check logic, since it should be 
	  done by individual XmlTextWriter.
	* XmlTextWriter.cs : Patch by Jerome. AddMissingElementXmlns () has
	  written multiple xmlns declarations.
	  Moved namespaceManager from abstract XmlWriter.
	  Write{Start|End}Attribute() and WriteString() now checks xmlns 
	  attribute value. (MS.NET holds value only with this write method).

2003-07-04  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs : removed xmlReader.Close() from Load(XmlReader).

2003-06-30  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocumentNavigator.cs : Implemented MoveTo*Namespace() and 
	  essentially changed most of the property handling (e.g. removed attribute 
	  enumerator and it now became really cloneable).
	* XmlNodeReader.cs : ReadInnerXml() changes its state as error
	  when the method is called at Initial state.

2003-06-25  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>
